# labwc

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  Makefile  NEWS.md  README.md  dbg.c  deco.c  labwc.h  main.c  meson.build  meson.options  meson_options.txt  output.c  server.c  theme.c  tinywl.c  view.c  xdg.c  xwl.c
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml
.github/workflows/: build.yml  irc.yml  labwc.github.io.yml  main.yml
clients/: lab-exit  lab-sensible-terminal  labmsg.c  labnag.c  meson.build  pool-buffer.c  pool-buffer.h
data/: labwc-portals.conf  labwc-session.target  labwc.desktop  rc.xml  themerc
docs/: README  autostart  environment  labmsg.1.scd  labnag.1.scd  labwc-actions.5.md  labwc-actions.5.scd  labwc-config.5.md  labwc-config.5.scd  labwc-environment.5.scd  labwc-menu.5.scd  labwc-theme.5.md  labwc-theme.5.scd  labwc.1.md  labwc.1.scd  labwc.5.md  labwc.desktop  menu.xml  menu.yaml  meson.build  rc.xml  rc.xml.all  rc.yaml  shutdown  themerc  xinitrc
include/: action-prompt-codes.h  action-prompt-command.h  action.h  buffer.h  cursor.h  cycle.h  debug.h  decorations.h  desktop-entry.h  desktop-state.h  dnd.h  edges.h  foreign-toplevel-internal.h  foreign-toplevel.h  icon-loader.h  idle.h  ipc.h  key-state.h  labwc.h  layers.h  magnifier.h  node.h  osd.h  output-state.h  output-virtual.h  output.h  overlay.h  overview.h  permissions.h  placement.h  rcxml.h  regions.h  resistance.h  resize-indicator.h  resize-outlines.h  server-unpriv.h  session-lock.h  show-desktop.h  snap-constraints.h  snap.h  (+12 more)
include/button/: button-png.h  button-svg.h  button-xbm.h  common.h
include/common/: array-size.h  array.h  border.h  borderset.h  box.h  buf.h  bug-on.h  corner.h  dir.h  direction.h  edge.h  enum.h  fd-util.h  fd_util.h  file-helpers.h  font.h  get-bool.h  grab-file.h  graphic-helpers.h  lab-scene-rect.h  list.h  log.h  macros.h  match.h  mem.h  nag.h  node-type.h  nodename.h  parse-bool.h  parse-double.h  scaled-font-buffer.h  scaled-icon-buffer.h  scaled-img-buffer.h  scaled-rect-buffer.h  scaled-scene-buffer.h  set.h  (+11 more)
menu/: menu.c
po/: LINGUAS  POTFILES.in  ar.po  ca.po  cs.po  da.po  de.po  el.po  en_US.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  kab.po  kk.po  ko.po  labwc.pot  lt.po  meson.build  ms.po  nl.po  pa.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sr_Latn.po  sv.po  te.po  (+5 more)
protocols/: ext-socket-manager-unstable-v1.xml  ext-workspace-v1.xml  meson.build  xi-socket-manager-unstable-v1.xml
scripts/: .gitignore  README.md  asan_leak_suppressions  check  checkpatch.pl  find-banned.sh  rip.c  run-with-asan.sh  wl_compcheck.py
src/: action-prompt-command.c  action.c  buffer.c  button-png.c  cursor.c  damage.c  dbg.c  debug.c  deco.c  desktop-entry.c  desktop-state.c  desktop.c  dnd.c  edges.c  foreign.c  icon-loader.c  idle.c  interactive.c  ipc.c  key-state.c  keyboard.c  layers.c  layers.c.new  magnifier.c  main.c  meson.build  node-descriptor.c  node.c  osd-field.c  osd.c  osd_field.c  output-state.c  output-virtual.c  output.c  overlay.c  overview.c  permissions.c  placement.c  realtime.c  regions.c  (+28 more)
src/button/: button-png.c  button-svg.c  button-xbm.c  common.c  meson.build
src/common/: borderset.c  box.c  buf.c  dir.c  direction.c  edge.c  fd-util.c  fd_util.c  file-helpers.c  font.c  gen-color-table.pl  get-bool.c  grab-file.c  graphic-helpers.c  lab-scene-rect.c  log.c  match.c  mem.c  meson.build  nag.c  node-type.c  nodename.c  parse-bool.c  parse-double.c  rgb.txt  scaled-font-buffer.c  scaled-icon-buffer.c  scaled-img-buffer.c  scaled-rect-buffer.c  scaled-scene-buffer.c  scaled_font_buffer.c  scaled_scene_buffer.c  scene-helpers.c  set.c  spawn-primary-client.c  spawn.c  string-helpers.c  surface-helpers.c  xcolor-table.h  xml.c  (+2 more)
src/config/: config-dir.c  dialog.c  gesturebind.c  keybind.c  libinput.c  meson.build  mousebind.c  rcxml.c  session.c  tablet-tool.c  tablet.c  touch.c  yaml2xml.c
src/cycle/: cycle.c  meson.build  osd-classic.c  osd-field.c  osd-scroll.c  osd-thumbnail.c
src/debug/: dbg.c  meson.build
src/decorations/: kde-deco.c  meson.build  xdg-deco.c
src/foreign-toplevel/: ext-foreign.c  foreign.c  meson.build  wlr-foreign.c
src/graphics/: pango.c  text.c
src/img/: gen-color-table.pl  img-png.c  img-svg.c  img-xbm.c  img-xpm.c  img.c  meson.build  xpm-color-table.h
src/input/: cursor-context.c  cursor.c  drawing_tablet.c  gestures.c  ime.c  input.c  key-state-indicator.c  key-state.c  keyboard.c  meson.build  tablet-pad.c  tablet-tool.c  tablet.c  tablet_pad.c  touch.c
src/menu/: menu.c  menu.c.rej
src/osd/: meson.build  osd-classic.c  osd-field.c  osd-thumbnail.c  osd.c
src/protocols/: meson.build  output-tracker.c  transaction-addon.c
src/protocols/cosmic_workspaces/: cosmic-workspaces.c  meson.build  output.c  transactions.c
src/protocols/ext-socket-manager/: ext_socket_manager_v1.c  meson.build
src/protocols/ext-workspace/: ext-workspace.c  meson.build  output.c
src/protocols/ext-workspaces/: ext-workspaces.c  meson.build  output.c
src/protocols/xi-socket-manager/: meson.build  xi_socket_manager_v1.c
src/scaled-buffer/: meson.build  scaled-buffer.c  scaled-font-buffer.c  scaled-icon-buffer.c  scaled-img-buffer.c
src/ssd/: meson.build  resize-indicator.c  resize_indicator.c  ssd-border.c  ssd-button.c  ssd-extents.c  ssd-handle.c  ssd-part.c  ssd-shadow.c  ssd-titlebar.c  ssd.c  ssd_border.c  ssd_button.c  ssd_extents.c  ssd_part.c  ssd_shadow.c  ssd_titlebar.c
src/theme/: meson.build  theme-builtin.c  theme-dir.c  theme.c
src/theme/xbm/: parse.c  tokenize.c  xbm.c
src/xbm/: parse.c  tokenize.c  xbm.c  xbm.c.new
subprojects/: .gitignore  libsfdo.wrap  seatd.wrap  wayland-protocols.wrap  wayland.wrap  wlroots.wrap
t/: Makefile  README.md  buf-simple.c  meson.build  str.c  t1000-buf.c  tap.c  tap.h  xml.c  yaml2xml.c
tests/: meson.build  t1000-rcxml-simple-parse.c  t1001-rcxml-nodenames-simple.c  tap.c  tap.h
tools/: asan_suppressions.txt  build  check  run
(+210 files in other folders)
