labwc_sources += files(
  'direction.c',
  'box.c',
  'buf.c',
  'dir.c',
  'fd-util.c',
  'file-helpers.c',
  'font.c',
  'grab-file.c',
  'graphic-helpers.c',
  'match.c',
  'mem.c',
  'nodename.c',
  'parse-bool.c',
  'parse-double.c',
  'scaled-font-buffer.c',
  'scaled-rect-buffer.c',
  'scaled-scene-buffer.c',
  'scene-helpers.c',
  'set.c',
  'surface-helpers.c',
  'spawn.c',
  'string-helpers.c',
)
