labwc_sources += files(
  'box.c',
  'buf.c',
  'dir.c',
  'edge.c',
  'fd-util.c',
  'file-helpers.c',
  'font.c',
  'grab-file.c',
  'graphic-helpers.c',
  'lab-scene-rect.c',
  'match.c',
  'mem.c',
  'nodename.c',
  'parse-bool.c',
  'parse-double.c',
  'scene-helpers.c',
  'set.c',
  'surface-helpers.c',
  'spawn.c',
  'string-helpers.c',
  'xml.c',
)
